# nova

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  run.sh  rustfmt.toml
engine/: Cargo.toml  README.md  build.rs
engine/examples/: boilerplate.rs  ecs_hello_world.rs  hello_world.rs
engine/src/: app.rs  application.rs  assets.rs  builder.rs  context.rs  core.rs  ecs.rs  engine.rs  game.rs  graphics.rs  handle.rs  input.rs  lib.rs  math.rs  prelude.rs  rendering.rs  sprites.rs  time.rs  window.rs  yaml.rs
engine/src/app/: mod.rs
engine/src/assets/: asset.rs  loader.rs  mod.rs  overlay_fs.rs
engine/src/clock/: time.rs
engine/src/core/: assets.rs  clock.rs  context.rs  fps.rs  fps_display.rs  fs.rs  input.rs  keyboard.rs  mod.rs  texture.rs  time.rs  viewport.rs
engine/src/ecs/: components.rs  context.rs  derive.rs  entities.rs  mod.rs  resources.rs  storages.rs  systems.rs
engine/src/engine/: component.rs  components.rs  context.rs  entities.rs  events.rs  extensions.rs  init.rs  mod.rs  options.rs  process.rs  processes.rs  resources.rs  running.rs  setup.rs  window.rs
engine/src/graphics/: atlas.rs  backend.rs  buffer.rs  canvas.rs  color.rs  commands.rs  context.rs  device.rs  drawable.rs  engine.rs  fence.rs  framebuffer.rs  gpu.rs  hal.rs  image.rs  layers.rs  mesh.rs  mod.rs  pipeline.rs  queues.rs  render.rs  render_pass.rs  renderer.rs  semaphore.rs  setup.rs  shader.rs  sprite.rs  surface.rs  swapchain.rs  sync.rs  vertices.rs  window.rs
engine/src/input/: button.rs  buttons.rs  mapping.rs  mod.rs  state.rs  system.rs  update.rs  updater.rs
engine/src/log/: color.rs  context.rs  level.rs  logger.rs  mod.rs
engine/src/math/: mod.rs  rect.rs  size.rs
engine/src/motion/: mod.rs
engine/src/platform/: engine.rs  keyboard.rs  mod.rs  window.rs
engine/src/process/: atomic_wake.rs  executor.rs  mod.rs  process_list.rs
engine/src/stage/: camera.rs  compass_direction.rs  direction.rs  mod.rs  motion.rs  movement.rs  position.rs  renderer.rs  sprite.rs
engine/src/tasks/: atomic_wake.rs  completion.rs  mod.rs  next_tick.rs  task.rs  task_list.rs  yield_once.rs
engine/src/time/: clock.rs  clocks.rs  duration.rs  engine.rs  frame_limiter.rs  frame_timer.rs  instant.rs  mod.rs  rate_limiter.rs  settings.rs  source.rs  ticker.rs  timer.rs  updater.rs
engine/src/ui/: fps_display.rs  mod.rs
engine/src/unstable/: actor.rs  character.rs  mod.rs  movement.rs
engine/src/utils/: chain.rs  droppable.rs  mod.rs  nullable.rs  ring.rs
engine/src/window/: backbuffer.rs  events.rs  events_loop.rs  handle.rs  mod.rs  options.rs  presenter.rs  raw.rs  settings.rs  surface.rs  update.rs  window.rs
gfx-test/: Cargo.toml  build.rs
gfx-test/src/: gfx_back.rs  main.rs  pipeline.rs  render_pass.rs  swapchain.rs
gfx-test/src/shaders/: default.vert  mod.rs
graphics/: Cargo.toml  build.rs
graphics/src/: backend.rs  buffers.rs  commands.rs  context.rs  init.rs  main.rs  mesh.rs  pass.rs  pipeline.rs  render_pass.rs  render_target.rs  renderer.rs  rendering.rs  shader.rs  swapchain.rs
nova/: .gitattributes  Cargo.toml  README.md
nova/nova_assets/: Cargo.toml
nova/nova_assets/src/: asset.rs  lib.rs  path.rs  read.rs  roots.rs  table.rs
nova/nova_core/: Cargo.toml
nova/nova_core/src/: assets.rs  clock.rs  collections.rs  component.rs  components.rs  ecs.rs  el.rs  engine.rs  entities.rs  entity.rs  events.rs  lib.rs  log.rs  math.rs  resources.rs  scheduler.rs  shared_str.rs  systems.rs  time.rs
nova/nova_ecs/: Cargo.toml
nova/nova_ecs/src/: components.rs  entities.rs  lib.rs
nova/nova_gfx/: Cargo.toml
nova/nova_gfx/src/: alloc.rs  backend.rs  buffer.rs  descriptor.rs  framebuffer.rs  lib.rs  pipeline.rs  render_pass.rs  semaphore.rs
nova/nova_graphics/: Cargo.toml
nova/nova_graphics/src/: alloc.rs  backend.rs  buffer.rs  canvas.rs  cmd.rs  color.rs  commands.rs  context.rs  descriptor.rs  gpu.rs  image.rs  image_data.rs  images.rs  lib.rs  loader.rs  pipeline.rs  pipelines.rs  queues.rs  render.rs  renderer.rs  rendering.rs  sampler.rs  shader.rs  shaders.rs  submission.rs  surface.rs  surfaces.rs  sync.rs  vertex.rs
nova/nova_input/: Cargo.toml
nova/nova_input/src/: controls.rs  gamepad.rs  keyboard.rs  lib.rs  mouse.rs
nova/nova_log/: Cargo.toml
nova/nova_log/src/: lib.rs
nova/nova_math/: Cargo.toml
nova/nova_math/src/: lib.rs  rect.rs  size.rs
nova/nova_render/: Cargo.toml
nova/nova_render/src/: lib.rs
nova/nova_renderer/: Cargo.toml
nova/nova_renderer/src/: alloc.rs  commands.rs  descriptors.rs  device.rs  framebuffer.rs  images.rs  lib.rs  pipeline.rs  presenter.rs  render.rs  render_pass.rs  shader.rs  sync.rs  texture.rs  textures.rs
nova/nova_sync/: Cargo.toml
nova/nova_sync/src/: lib.rs
nova/nova_time/: Cargo.toml
nova/nova_time/src/: duration.rs  instant.rs  lib.rs  loops.rs
nova/nova_ui/: Cargo.toml
nova/nova_ui/src/: container.rs  elements.rs  image.rs  layout.rs  lib.rs  messages.rs  nodes.rs  painter.rs  screen.rs  specs.rs  style.rs  text.rs
nova/nova_window/: Cargo.toml
nova/nova_window/src/: events.rs  lib.rs  options.rs  surface.rs  update.rs
nova/src/: app.rs  assets.rs  clock.rs  ecs.rs  el.rs  engine.rs  graphics.rs  lib.rs  math.rs  renderer.rs  ui.rs  utils.rs  window.rs
nova/src/assets/: asset_loader.rs  overlay_fs.rs
nova/src/clock/: instant.rs  time.rs
nova/src/ecs/: components.rs  entities.rs
nova/src/el/: context.rs  element.rs  hierarchy.rs  instance.rs  message.rs  mount.rs  node.rs  prototype.rs  spec.rs
nova/src/engine/: events.rs  resources.rs
nova/src/gfx/: alloc.rs  buffer.rs  shader.rs
nova/src/graphics/: backend.rs  color.rs  commands.rs  device.rs  image.rs  pipeline.rs  renderer.rs  shader.rs
nova/src/input/: gamepad.rs
nova/src/log/: formats.rs  logger.rs  mod.rs
nova/src/math/: rect.rs  size.rs
nova/src/renderer/: backend.rs  buffer.rs  commands.rs  descriptors.rs  device.rs  drawing.rs  framebuffer.rs  image.rs  pipeline.rs  presenter.rs  render.rs  render_pass.rs  shader.rs  sync.rs  texture.rs
nova/src/time/: loops.rs  (+3 more)
(+472 files in other folders)
