[package]
name = "nova"
version = "0.2.0"
authors = ["Brennan Frydl <me@bfrydl.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
crossbeam = "0.4"
derive_more = "0.13"
log = { version = "0.4", features = ["std"] }
nalgebra = "*"
num-traits = "*"
shrev = "1.0"
specs = { git = "https://github.com/bfrydl/specs" }
specs-derive = "0.3"
winit = "0.18"
