[package]
name = "nova-graphics"
version = "0.1.0"
authors = ["Brennan Frydl <me@bfrydl.com>"]
edition = "2018"

[dependencies]
bflog = "0.2.2"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", features = ["serde"] }
winit = "0.17"
smallvec = "0.6.5"
parking_lot = "0.6.4"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx" }

[target.'cfg(windows)'.dependencies]
gfx-backend-dx12 = { git = "https://github.com/gfx-rs/gfx"}

[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend-metal = { git = "https://github.com/gfx-rs/gfx"}

[build-dependencies]
glsl-to-spirv = "*"
