[workspace]
exclude = ["nova_input", "nova_renderer", "nova_ui"]

[package]
name = "nova"
version = "0.2.0"
authors = ["Brennan Frydl <me@bfrydl.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
nova_ecs = { path = "./nova_ecs" }
nova_math = { path = "./nova_math" }
nova_time = { path = "./nova_time" }
nova_graphics = { path = "./nova_graphics" }
nova_window = { path = "./nova_window" }
