[workspace]
exclude = ["nova_input", "nova_ui"]

[package]
name = "nova"
version = "0.4.0"
authors = ["Brennan Frydl <me@bfrydl.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
nova_ecs = { path = "./nova_ecs" }
nova_gfx = { path = "./nova_gfx" }
nova_log = { path = "./nova_log" }
nova_math = { path = "./nova_math" }
nova_render = { path = "./nova_render" }
nova_time = { path = "./nova_time" }
nova_window = { path = "./nova_window" }
