[package]
name = "nova_core"
version = "0.3.0"
authors = ["Brennan Frydl <me@bfrydl.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
crossbeam = "0.7"
derive_more = "0.14"
log = { version = "0.4", features = ["std"] }
quick-error = "1.2"
rayon = "1.0"
shrev = "1.0"
shred-derive = "0.5"
specs = "0.14"
