[package]
name = "nova_graphics"
version = "0.3.0"
authors = ["Brennan Frydl <me@bfrydl.com>"]
edition = "2018"

[dependencies]
gfx-hal = "0.2"
glsl-to-spirv = "0.1"
image = "0.21"
nova_ecs = { path = "../nova_ecs" }
nova_log = { path = "../nova_log" }
nova_math = { path = "../nova_math" }
nova_window = { path = "../nova_window" }
winit = "0.18"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
gfx-backend-vulkan = "0.2"

[target.'cfg(windows)'.dependencies]
gfx-backend-dx12 = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend-metal = "0.2"
