[package]
name = "nova_renderer"
version = "0.3.0"
authors = ["Brennan Frydl <me@bfrydl.com>"]
edition = "2018"

[dependencies]
gfx-hal = "0.1"
glsl-to-spirv = "0.1"
nova_core = { path = "../nova_core" }
nova_graphics = { path = "../nova_graphics" }
nova_window = { path = "../nova_window" }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
gfx-backend-vulkan = "0.1"

[target.'cfg(windows)'.dependencies]
gfx-backend-dx12 = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend-metal = "0.1"
